# redy

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  README.ja.md  README.md  README_ja.md  c  c.bat  cc  cc.bat  project_config.toml  pyproject.toml
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app.cc  app.h  cli_handler.cc  cli_handler.h  exe.rc  init_handler.cc  init_handler.h  main.cc  preinit_handler.cc  preinit_handler.h  win_main.cc
src/bench/: CMakeLists.txt  bench_main.cc
src/core/: CMakeLists.txt  check.cc  check.h  location.cc  location.h  location_test.cc
src/core/base/: core_export.h  file_manager.cc  file_manager.h  file_util.cc  file_util.h  file_util_bench.cc  file_util_build_info.cc  file_util_test.cc  logger.cc  logger.h  range.h  range_test.cc  source_location.cc  source_location.h  source_range.cc  source_range.h  string_util.cc  string_util.h  string_util_bench.cc  string_util_test.cc  style_builder.cc  style_builder.h  style_util.h  vec.h  vec_test.cc
src/core/base/utf/: .gitignore  utf8_reader.cc  utf8_reader.h
src/core/cli/: arg_parser.cc  arg_parser.h  arg_parser_build_info.cc  console.cc  console.h
src/core/cli/ansi/: progress_bar.cc  progress_bar.h  style_builder.cc  style_builder.h  style_util.cc  style_util.h
src/core/cli/argument_types/: flag.h  list.h  option.h  option_base.h  positional.h
src/core/diagnostics/: signal_handler.cc  signal_handler.h  stack_trace.cc  stack_trace.h  stack_trace_entry.cc  stack_trace_entry.h  system_info.cc  system_info.h  system_info_test.cc  terminate_handler.cc  terminate_handler.h
src/core/redy/: build_type.h  runtime_options.cc  runtime_options.h
src/core/time/: time_util.cc  time_util.h
src/frontend/: CMakeLists.txt  README.md  frontend_integration_test.cc  frontend_test.cc
src/frontend/ast/: CMakeLists.txt  ast.cc
src/frontend/ast/base/: ast_export.h  base_node.cc  base_node.h  context.h  node_id.h  node_test.cc  nodes.h
src/frontend/ast/nodes/: assignment_node.cc  assignment_node.h  binary_op_node.cc  binary_op_node.h  block_node.cc  block_node.h  call_node.cc  call_node.h  expression_statement_node.cc  expression_statement_node.h  for_node.cc  for_node.h  function_node.cc  function_node.h  identifier_node.cc  identifier_node.h  if_node.cc  if_node.h  literal_node.cc  literal_node.h  node_util.h  nodes.h  parameter_list_node.cc  parameter_list_node.h  parameter_node.cc  parameter_node.h  program_node.cc  program_node.h  return_node.cc  return_node.h  type_node.cc  type_node.h  unary_op_node.cc  unary_op_node.h  variable_declaration_node.cc  variable_declaration_node.h  while_node.cc  while_node.h
src/frontend/ast/parser/: parse_error.h  parser.cc  parser.h  parser_test.cc  result.cc  result.h
src/frontend/base/: CMakeLists.txt  base_export.h
src/frontend/base/data/: arena.h  char_stream.cc  char_stream.h  char_stream_bench.cc  char_stream_test.cc  payload_util.h  string_arena.cc  string_arena.h
src/frontend/base/keyword/: attribute_keyword.h  control_flow_keyword.h  declaration_keyword.h  keyword.cc  keyword.h  keyword_bench.cc  keyword_test.cc  modifier_keyword.h  type.h  type_keyword.h
src/frontend/base/literal/: literal.h
src/frontend/base/operator/: README.md  binary_operator.h  operator.h  unary_operator.h
src/frontend/base/string/: string_id.h  string_interner.cc  string_interner.h  string_interner_test.cc
src/frontend/base/token/: token.cc  token.h  token_bench.cc  token_kind.h  token_stream.cc  token_stream.h  token_stream_bench.cc  token_stream_test.cc  token_test.cc
src/frontend/data/: CMakeLists.txt
src/frontend/data/ast/: CMakeLists.txt  ast.cc  context.h
src/frontend/data/hir/: CMakeLists.txt  context.h
src/frontend/diagnostic/: CMakeLists.txt
src/frontend/diagnostic/base/: diagnostic_engine.cc  diagnostic_engine.h  diagnostic_engine_test.cc  diagnostic_export.h  diagnostic_options.h  style.h
src/frontend/diagnostic/data/: annotation.cc  annotation.h  diagnostic_entry.cc  diagnostic_entry.h  diagnostic_id.h  entry_builder.cc  entry_builder.h  header.cc  header.h  label.cc  label.h  result.h  severity.h
src/frontend/diagnostic/engine/: diagnostic_engine.cc  diagnostic_engine.h  diagnostic_engine_test.cc
src/frontend/lexer/: CMakeLists.txt  ascii.cc  lexer.cc  lexer.h  lexer_bench.cc  lexer_test.cc  other.cc  unicode.cc
src/frontend/lexer/base/: char_stream.cc  char_stream.h  char_stream_bench.cc  char_stream_test.cc  lex_error.h  lexer_export.h
src/frontend/lexer/keyword/: keyword.cc  keyword.h  keyword_bench.cc  keyword_test.cc
src/frontend/lexer/literal/: char.cc  numeric.cc  str.cc
src/frontend/lexer/token/: token.cc  token.h  token_bench.cc  token_kind.h  token_stream.cc  token_stream.h  token_stream_bench.cc  token_stream_test.cc  token_test.cc
src/frontend/parser/: CMakeLists.txt  dummy.cc  parse_error.h  parser.cc  parser.h  parser_test.cc
src/frontend/parser/base/: parser_export.h
src/frontend/parser/parse/: assignment.cc  expression.cc  function.cc  function_call.cc  param.cc  param_list.cc  statement.cc  type.cc
src/frontend/pipeline/: CMakeLists.txt  frontend_integration_test.cc  pipeline.cc
src/frontend/processor/: CMakeLists.txt
src/frontend/processor/lexer/: CMakeLists.txt  ascii.cc  lexer.cc  lexer.h  lexer_bench.cc  lexer_test.cc  other.cc  unicode.cc
src/i18n/: CMakeLists.txt  i18n.cc
src/i18n/base/: i18n_export.h  translation_util.h  translator.h  translator_test.cc
src/i18n/base/data/: .gitignore  (+1 more)
src/testing/: CMakeLists.txt  test_main.cc  test_util.h
src/unicode/: CMakeLists.txt
src/unicode/base/: string_util.cc  unicode_export.h  unicode_util.asm  unicode_util.cc  unicode_util.h  unicode_util_avx2.asm  utf8_decode.cc  utf8_decode.h  utf8_stream.cc  utf8_stream.h  utf8_stream_bench.cc  utf8_stream_test.cc
src/unicode/utf8/: cursor.cc  cursor.h  cursor_bench.cc  cursor_test.cc  decoder.cc  decoder.h  decoder_bench.cc  file.cc  file.h  file_manager.cc  file_manager.h  stream.cc  stream.h  stream_bench.cc  stream_test.cc
(+141 files in other folders)
