# Copyright 2025 pugur
# This source code is licensed under the Apache License, Version 2.0
# which can be found in the LICENSE file.

cmake_minimum_required(VERSION 4.0.2 FATAL_ERROR)

execute_process(
  COMMAND python3 ${CMAKE_CURRENT_SOURCE_DIR}/src/build/scripts/read_project_config.py
  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
  OUTPUT_VARIABLE PROJECT_CONFIG_OUTPUT
  RESULT_VARIABLE PROJECT_CONFIG_EXIT_CODE
  OUTPUT_STRIP_TRAILING_WHITESPACE
)

if(NOT PROJECT_CONFIG_EXIT_CODE EQUAL 0)
  message(FATAL_ERROR "Failed to read project config: exit code ${PROJECT_CONFIG_EXIT_CODE}")
endif()

execute_process(
  COMMAND python3 ${CMAKE_CURRENT_SOURCE_DIR}/src/build/scripts/ucd_gen.py
  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
  RESULT_VARIABLE UCD_GEN_CONFIG_EXIT_CODE
)

if(NOT UCD_GEN_CONFIG_EXIT_CODE EQUAL 0)
  message(FATAL_ERROR "Failed to read project config: exit code ${UCD_GEN_CONFIG_EXIT_CODE}")
endif()

string(REPLACE "\n" ";" PROJECT_CONFIG_LIST "${PROJECT_CONFIG_OUTPUT}")

list(LENGTH PROJECT_CONFIG_LIST REAL_LENGTH)

set(LIST_LEN 9)

if(NOT REAL_LENGTH EQUAL ${LIST_LEN})
  message(FATAL_ERROR "Expected ${LIST_LEN} fields from project config, got ${REAL_LENGTH}")
endif()

list(GET PROJECT_CONFIG_LIST 0 PROJECT_NAME_FROM_CONFIG)
list(GET PROJECT_CONFIG_LIST 1 MAIN_EXECUTABLE_NAME_FROM_CONFIG)
list(GET PROJECT_CONFIG_LIST 2 PROJECT_VERSION_FROM_CONFIG)
list(GET PROJECT_CONFIG_LIST 3 PROJECT_DESCRIPTION_FROM_CONFIG)
list(GET PROJECT_CONFIG_LIST 4 PROJECT_HOMEPAGE_FROM_CONFIG)
list(GET PROJECT_CONFIG_LIST 5 PROJECT_C_VERSION_FROM_CONFIG)
list(GET PROJECT_CONFIG_LIST 6 PROJECT_CXX_VERSION_FROM_CONFIG)
list(GET PROJECT_CONFIG_LIST 7 PROJECT_AUTHOR_FROM_CONFIG)
list(GET PROJECT_CONFIG_LIST 8 PROJECT_AUTHOR_CONTACT_FROM_CONFIG)

project(${PROJECT_NAME_FROM_CONFIG}
  VERSION ${PROJECT_VERSION_FROM_CONFIG}
  DESCRIPTION ${PROJECT_DESCRIPTION_FROM_CONFIG}
  HOMEPAGE_URL ${PROJECT_HOMEPAGE_FROM_CONFIG}
  LANGUAGES C CXX
)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src)
