[project]
name = "redy"
version = "0.1.0"
description = ""
authors = [
    {name = "pugur",email = "pugurmc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<2.33.0)",
    "cpplint (>=2.0.2,<2.1.0)",
    "pyyaml (>=6.0.2,<6.1.0)",
    "pygments (>=2.11.2,<2.12.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "guppy3 (>=3.1.5,<3.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
