# Copyright 2025 pugur
# This source code is licensed under the Apache License, Version 2.0
# which can be found in the LICENSE file.

# add_subdirectory(pipeline)

add_subdirectory(base)
add_subdirectory(diagnostic)
add_subdirectory(lexer)
add_subdirectory(ast)
add_subdirectory(parser)
# add_subdirectory(sema)

# add_subdirectory(diagnostics)
